--- a/color.css
+++ b/color.css
@@ -3,8 +3,7 @@ h1 {text-align: center;
 h1 {
     color: cornflowerblue;
 }
-body{color: brown;
-}
 body {
+    color: rgb(197, 171, 56)
     background-color: rgb(175, 236, 252);
 }
