--- a/color.css
+++ b/color.css
@@ -4,6 +4,6 @@ h1 {
     color: cornflowerblue;
 }
 body {
-    color: rgb(197, 171, 56)
-    background-color: rgb(175, 236, 252);
+    color: brown;
+    background-color: rgb(205, 248, 255);
 }
