--- a/color.css
+++ b/color.css
@@ -8,3 +8,13 @@ body {
     color: brown;
     background-color: rgb(205, 248, 255);
 }
+.picture{
+    width: 200px;
+    border-color: brown;
+    border-width: 7px;
+    border-style: solid;
+    border-radius: 100px;
+}
+.headers{
+    color: blue;
+}
