--- a/color.css
+++ b/color.css
@@ -1,7 +1,15 @@
-h1 {text-align: center;
-}
 h1 {
     color: cornflowerblue;
+    text-align: center;
+    background-color: rgba(141, 141, 211, 0.6);
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-right: 30%;
+    margin-left: 30%;
+    border-radius: 0%;
+    border-color:rgb(1, 61, 172);
+    border-width: 10%;
+    border-style: solid;
 }
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -12,7 +20,11 @@ body {
 #quote-of-the-day {
     position:relative;
     text-align:center;  
-    color:black;
+    color:rgba(0,0,0,0.7);
+    background-color: orange;
+    margin-left:25%;
+    margin-right:25%;
+    padding: 1%;
 }
 #long-box {
     width: 200px;
@@ -27,6 +39,7 @@ body {
 }
 .headers{
     color: rgb(99, 0, 0);
+    display: inline;
 }
 a{
     color: #d83636;
@@ -41,4 +54,8 @@ a:hover{
     border-color: brown;
     border-width: 1%;
     border-style: solid;
+}
+.head-picture {
+    position: relative;
+
 }
