--- a/color.css
+++ b/color.css
@@ -39,7 +39,14 @@ body {
 }
 .headers{
     color: rgb(99, 0, 0);
+}
+nav ul{
+    margin: 0px;
+    padding: 5px, 0px, 5px, 30px;
+}
+nav li{
     display: inline;
+    margin-right: 2%;
 }
 a{
     color: #d83636;
