--- a/color.css
+++ b/color.css
@@ -3,13 +3,14 @@ h1 {
     text-align: center;
     background-color: rgba(141, 141, 211, 0.6);
     padding-top: 1%;
+    margin-left: 20%;
     padding-bottom: 1%;
     margin-right: 30%;
     margin-left: 30%;
     border-radius: 0%;
     border-color:rgb(1, 61, 172);
     border-width: 10%;
-    border-style: solid;
+    border-style: solid; 
 }
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -24,21 +25,30 @@ body {
     background-color: orange;
     margin-left:25%;
     margin-right:25%;
-    padding: 1%;
+    padding: 3%;
 }
 #long-box {
     width: 200px;
 }
-.picture{
+#head-picture{
     padding: 1px;
     width: 3%;
-    border-color: brown;
+    border-color: rgba(1, 61, 172);
     border-width: 1%;
     border-style: solid;
     border-radius: 50%;
+    position: fixed;
+    left: 39%;
+    top: 3.2%;
 }
 .headers{
     color: rgb(99, 0, 0);
+}
+#navbar{
+    position: absolute;
+    width: 100%;
+    top: 22%;
+    left: 32%;
 }
 nav ul{
     margin: 0px;
@@ -61,8 +71,4 @@ a:hover{
     border-color: brown;
     border-width: 1%;
     border-style: solid;
-}
-.head-picture {
-    position: relative;
-
 }
