--- a/color.css
+++ b/color.css
@@ -4,30 +4,36 @@ h1 {
     background-color: rgba(141, 141, 211, 0.6);
     padding-top: 1%;
     padding-bottom: 1%;
-    margin-right: 30%;
-    margin-left: 30%;
+    margin: auto;
     border-radius: 0%;
     border-color:rgb(1, 61, 172);
     border-width: 10%;
     border-style: solid; 
+    width: 30%;
 }
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: brown;
-    background-color: rgb(254, 255, 191);
+    background-color: #FFFFFF;
     
 }
 #quote-of-the-day {
-    position:relative;
-    text-align:center;  
-    color:rgba(0,0,0,0.7);
-    background-color: orange;
-    margin-left:25%;
-    margin-right:25%;
+    position: relative;
+    text-align: center;  
+    color: rgba(0,0,0,0.7);
+    background:
+    linear-gradient(
+      53deg,
+      #ccfffc,
+      #ffcccf
+    );
+    margin:auto;
     padding: 3%;
+    width: 35%;
+
 }
 #long-box {
-    width: 200px;
+    width: 250px;
 }
 #head-picture{
     padding: 1px;
@@ -36,7 +42,7 @@ body {
     border-width: 1%;
     border-style: solid;
     border-radius: 50%;
-    position: fixed;
+    position: absolute;
     left: 39%;
     top: 3.2%;
 }
@@ -44,7 +50,7 @@ body {
     color: rgb(99, 0, 0);
 }
 #navbar{
-    position: absolute;
+    position: fixed;
     width: 100%;
     top: 22%;
     left: 32%;
