Revert "Update color.css"
This reverts commit 34baea492961569da164582c1828663488fb371d.

--- a/color.css
+++ b/color.css
@@ -3,6 +3,7 @@ h1 {
     text-align: center;
     background-color: rgba(141, 141, 211, 0.6);
     padding-top: 1%;
+    margin-left: 20%;
     padding-bottom: 1%;
     margin-right: 30%;
     margin-left: 30%;
