--- a/color.css
+++ b/color.css
@@ -3,14 +3,13 @@ h1 {
     text-align: center;
     background-color: rgba(141, 141, 211, 0.6);
     padding-top: 1%;
-    margin-left: 20%;
     padding-bottom: 1%;
     margin-right: 30%;
     margin-left: 30%;
     border-radius: 0%;
     border-color:rgb(1, 61, 172);
     border-width: 10%;
-    border-style: solid; 
+    border-style: solid;
 }
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -25,30 +24,21 @@ body {
     background-color: orange;
     margin-left:25%;
     margin-right:25%;
-    padding: 3%;
+    padding: 1%;
 }
 #long-box {
     width: 200px;
 }
-#head-picture{
+.picture{
     padding: 1px;
     width: 3%;
-    border-color: rgba(1, 61, 172);
+    border-color: brown;
     border-width: 1%;
     border-style: solid;
     border-radius: 50%;
-    position: fixed;
-    left: 39%;
-    top: 3.2%;
 }
 .headers{
     color: rgb(99, 0, 0);
-}
-#navbar{
-    position: absolute;
-    width: 100%;
-    top: 22%;
-    left: 32%;
 }
 nav ul{
     margin: 0px;
@@ -71,4 +61,8 @@ a:hover{
     border-color: brown;
     border-width: 1%;
     border-style: solid;
+}
+.head-picture {
+    position: relative;
+
 }
