--- a/home.css
+++ b/home.css
@@ -16,7 +16,7 @@ h1 {
 h4{
     font-size: 40;
 }
-#quote {
+#home-quote {
     position:relative;
     text-align:center;  
     color: #FFFFFF;
@@ -31,6 +31,16 @@ body {
     background-color: rgb(236, 235, 182);
 }
 
+a {
+    color: inherit;
+    text-decoration: none
+}
+
+a:hover{
+    transform: scale(2);
+    color: purple;
+}
+
 ul{
     list-style-type: none;
 }
@@ -39,9 +49,9 @@ p{
     width: 60%;
     background-color: beige;
     padding: 1%;
-    margin: auto;
+    margin: auto; /* aligns the box to the middle of the page */
     margin-bottom: 2%;
-    font-size: 15px;
+    font-size: 16px;
     text-align:center;
 }
 .picture{
@@ -73,16 +83,14 @@ nav li{
     margin: auto;
     
 }
-nav li a {
+#nav-bar li a {
     color:white;
     padding: 2%;
 }
 
-#nyles-com{
-    color: #b35015;
-}
 #nyles-com:hover {
-    color: #1a97e1;
+    /* color: #1a97e1; */
+    color:black;
 }
 
 .bio{
@@ -102,16 +110,23 @@ nav li a {
     border-style: solid;
 }
 
-a {
-    text-decoration: none
-}
-
-a:hover{
-    transform: scale(2);
-    color: cyan;
-}
-
 footer {
     position: absolute;
     bottom: 1%;
+}
+#first-summary{
+    color:black;
+}
+
+#test-box{
+    
+}
+
+#nav-bar a:hover{
+    font-size: 175%;
+    color: cyan;
+}
+
+.footer-content{
+    background-color: transparent;
 }
