--- a/nyles-com.css
+++ b/nyles-com.css
@@ -1,17 +1,10 @@
 h1 {
-    color: #ffffff;
+    color: black;
     text-align: center;
-    background-color: #0d4a6f;
-    padding-top: 1%;
-    padding-bottom: 1%;
     margin: auto;
-    width: 45%;
     margin-top: 5%; 
-    border-radius: 0%;
-    border-color:rgb(151, 162, 182);
-    border-width: 0%;
-    border-style: solid;
     position: relative;
+    font-size: 48px;
 }
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -19,18 +12,6 @@ body {
     background-color: rgb(236, 235, 182);
 }
 
-.picture{
-    padding: 0%;
-    width: 3%;
-    border-color: #0a3550;
-    border-width: 1%;
-    border-style: solid;
-    border-radius: 50%;
-    position: absolute;
-    top: 2%;
-    left: 35%;
-    z-index: 1;
-}
 .headers{
     background-color: #0D4A6F;
     padding: 0.5%;
@@ -62,10 +43,11 @@ a:hover{
     color: rgb(0, 0, 0);
     border-style: none;
     font-size: 50px;
+    margin-top: 0px;
 }
 
 #return-home{
     font-size:32px;
-    margin:auto;
     text-align: center;
+    vertical-align: auto;
 }
